# AI2Text-_new2

./: .gitignore  AUTO_TRAINING_IMPLEMENTATION.md  BUG_ANALYSIS_REPORT.md  CODEBASE_UNDERSTANDING.md  CODE_DOCUMENTATION_SUMMARY.md  COMPLETE_SYSTEM_ARCHITECTURE.md  COMPLETE_SYSTEM_SUMMARY.md  DATA_PREPARATION_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_STATUS.md  DVC_SETUP.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  HOW_TO_TRAIN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MICROSERVICES_IMPLEMENTATION_COMPLETE.md  MICROSERVICES_QUICK_START.md  MICROSERVICES_README.md  MICROSERVICES_SETUP_GUIDE.md  Makefile  NEXT_STEPS.md  PHASE_0_AND_1_SUMMARY.md  PHASE_1_INSTRUCTIONS.md  PHASE_3_INSTRUCTIONS.md  PHASE_4_TRAINING_TTQ.md  PHASE_A_B_C_AUTO_TRAINING.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  PROJECT_HEALTH_REPORT.md  PROJECT_ORGANIZATION.md  PROJECT_SUMMARY.md  PSEUDOCODE_IMPLEMENTATION.md  QUICK_REFERENCE.md  QUICK_START_DATABASE.md  QUICK_TRAIN.md  README.md  README_MICROSERVICES.md  README_PRODUCTION_READY.md  (+16 more)
.github/workflows/: ci.yml
analysis/: error_analysis.py
api/: app.py  public_api.py
configs/: db.yaml  default.yaml  embeddings.yaml
data/: README.md
data/processed/: .gitkeep
data/raw/: .gitkeep
database/: __init__.py  db_utils.py  init_db.sql
decoding/: __init__.py  beam_search.py  confidence.py  lm_decoder.py  rescoring.py
docs/: MAIN_README_REFERENCE.md  MICROSERVICES_COMPLETE.md  MICROSERVICES_MIGRATION.md  PROJECT_STRUCTURE.md  SECURITY_NOTES.md  STRUCTURE_SUMMARY.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION.md  MICROSERVICES_ARCHITECTURE.md
docs/guides/: API_PUBLIC_DOCUMENTATION.md  FRONTEND_SETUP.md  RUN_DEMO.md  START_FRONTEND.md
docs/status/: DATABASE_IMPROVEMENTS.md  FINAL_SYSTEM_SUMMARY.md  ROADMAP_IMPLEMENTATION_STATUS.md
examples/: train_example.py
frontend/: API_INTEGRATION.md  README.md  docs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
infra/: docker-compose.yml
infra/nats/: streams.json
libs/common/: __init__.py  observability.py
models/: __init__.py  asr_base.py  enhanced_asr.py  lstm_asr.py
nlp/: __init__.py  faiss_index.py  phon2vec_trainer.py  word2vec_trainer.py
notebooks/: .gitkeep  README.md
preprocessing/: __init__.py  audio_processing.py  bpe_tokenizer.py  phonetic.py  text_cleaning.py
projects/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MULTI_PROJECT_GUIDE.md  PRODUCTION_ROADMAP.md  QUICK_START.md  README.md
projects/ai2text-common/: README.md  pyproject.toml
projects/ai2text-common/.github/workflows/: ci.yml  publish.yml
projects/ai2text-common/ai2text_common/: __init__.py  events.py
projects/ai2text-common/ai2text_common/observability/: __init__.py  logging.py  metrics.py  tracing.py
projects/ai2text-common/ai2text_common/schemas/: __init__.py  common.py  events.py
projects/ai2text-common/tests/: __init__.py
projects/ai2text-contracts/: README.md  VERSIONING.md
projects/services/asr/: Dockerfile  Makefile  README.md  pyproject.toml
projects/services/asr/app/: __init__.py  deps.py  main.py  streaming_optimization.py
projects/services/asr/tests/: __init__.py  test_main.py
projects/services/embeddings/: Dockerfile  Makefile  README.md  pyproject.toml
projects/services/embeddings/app/: __init__.py  idempotency.py  worker.py
projects/services/embeddings/tests/: test_worker.py
projects/services/gateway/: README.md  pyproject.toml
projects/services/gateway/.github/workflows/: ci.yml
projects/services/gateway/app/: __init__.py  main.py
projects/services/ingestion/: README.md  pyproject.toml
projects/services/ingestion/app/: __init__.py  main.py
projects/services/metadata/: Makefile  README.md  pyproject.toml
projects/services/metadata/app/: __init__.py  deps.py  main.py
projects/services/metadata/tests/: __init__.py  test_main.py
projects/services/nlp-post/: Dockerfile  Makefile  README.md  pyproject.toml
projects/services/nlp-post/app/: __init__.py  worker.py
projects/services/training-orchestrator/: Dockerfile  Makefile  README.md  pyproject.toml
projects/services/training-orchestrator/app/: __init__.py  orchestrator.py
projects/services/training-orchestrator/tests/: test_orchestrator.py
requirements/: README.md  api.txt  base.txt  microservices.txt
scripts/: benchmark.py  bootstrap.sh  build_embeddings.py  build_lm.py  check_project.py  download_sample_data.py  jwt_dev_token.py  list_tests.py  prepare_data.py  validate_data.py  verify_phase0.py  verify_setup.py
tests/: README_ADVANCED_TESTS.md  README_TESTS.md  __init__.py  conftest.py  conftest_lazy.py  pytest.ini  run_tests_simple.py  smoke.http  test_database.py  test_integration.py  test_metrics.py  test_models.py  test_preprocessing.py  test_training.py
training/: __init__.py  callbacks.py  dataset.py  enhanced_train.py  evaluate.py  train.py
utils/: __init__.py  logger.py  metrics.py
(+147 files in other folders)
