[project]
name = "ai2text-asr"
version = "1.0.0"
description = "AI2Text ASR service"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "nats-py>=2.6.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "ai2text-common>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

